--- a/public/css/_layout.scss
+++ b/public/css/_layout.scss
@@ -9,9 +9,12 @@ html,
 body {
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     background-color: #EFEEE6;
     height: 100vh;
+}
+body{
+    height: 100svh;
 }
