--- a/public/css/chatPDF.css
+++ b/public/css/chatPDF.css
@@ -14,7 +14,6 @@ input[type=text] {
 
 .container {
   gap: 0.8rem;
-  max-width: 400px;
 }
 
 h1, h3 {
@@ -87,4 +86,42 @@ h1, h3 {
   100% {
     opacity: 0;
   }
-}/*# sourceMappingURL=chatPDF.css.map */
+}
+.content {
+  display: grid;
+  grid-template-columns: 0.5fr 0.8fr 1fr;
+  gap: 1rem;
+}
+
+ul li {
+  display: flex;
+}
+ul li label {
+  width: 100%;
+  flex: 1;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+ul li input[type=radio] {
+  display: none;
+}
+ul li input[type=radio]:checked + label {
+  background-color: #535353;
+  color: #fff;
+  transform: translate(-0.25rem, -0.25rem);
+  box-shadow: 0.25rem 0.25rem 0rem black;
+}
+ul li label {
+  cursor: pointer;
+  border: 1px solid #000;
+  padding: 5px;
+  transition: 0.3s;
+}
+ul li label:hover {
+  transform: translate(-0.25rem, -0.25rem);
+  box-shadow: 0.25rem 0.25rem 0rem black;
+}
