--- a/public/css/chatPDF.scss
+++ b/public/css/chatPDF.scss
@@ -13,7 +13,7 @@ input[type="text"] {
 }
 .container{
     gap: .8rem;
-    max-width: 400px;
+    // max-width: 400px;
 }
 h1,h3{
     margin: 0;
@@ -86,5 +86,47 @@ h1,h3{
     }
     100% {
         opacity: 0;
+    }
+}
+.content{
+    display: grid;
+    grid-template-columns: .5fr .8fr 1fr;
+    gap: 1rem;
+}
+ul{
+    li{
+        display: flex;
+        label{
+            width: 100%;
+            flex: 1;
+        }
+    }
+}
+
+ul{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    li{
+        input[type="radio"]{
+            display: none;
+            &:checked + label{
+                // background-color: #d8d7cf;
+                background-color: #535353;
+                color: #fff;
+                transform: translate(-0.25rem, -0.25rem);
+                box-shadow: .25rem .25rem 0rem rgba(rgb(0, 0, 0),1);
+            }
+        }
+        label{
+            cursor: pointer;
+            border: 1px solid #000;
+            padding: 5px;
+            transition: .3s;
+            &:hover{
+                transform: translate(-0.25rem, -0.25rem);
+                box-shadow: .25rem .25rem 0rem rgba(rgb(0, 0, 0),1);
+            }
+        }
     }
 }
