--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
 * {
   box-sizing: border-box;
@@ -8,11 +9,12 @@ html,
 body {
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: #EFEEE6;
   height: 100vh;
+}
+
+body {
+  height: 100svh;
 }
 
 .container {
@@ -20,7 +22,6 @@ body {
   flex-direction: column;
   min-width: 300px;
   padding: 2rem;
-  border: 1px solid #000;
   transition: 0.5s;
 }
 
@@ -50,4 +51,28 @@ ul {
 a {
   text-decoration: none;
   color: #000;
-}/*# sourceMappingURL=main.css.map */
+}
+
+.pdf-viewer {
+  overflow: scroll;
+}
+
+#pdf-container {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  /* 您可以根據需要調整高度 */
+  overflow: scroll;
+}
+
+.textLayer {
+  font-family: sans-serif;
+  overflow: hidden;
+  line-height: 1;
+}
+
+/* 可選：調整每個頁面的樣式 */
+#pdf-container .page {
+  margin-bottom: 10px;
+  /* 頁面之間的間距 */
+}
