--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     min-width: 300px;
     padding: 2rem;
-    border: 1px solid #000;
+    // border: 1px solid #000;
     transition: .5s;
     
 }
@@ -32,4 +32,27 @@ ul{
 a{
     text-decoration: none;
     color: #000;
+}
+.pdf-viewer{
+    overflow: scroll;
+}
+#pdf-container {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    /* 您可以根據需要調整高度 */
+    overflow: scroll;
+    // border: 1px solid #ccc;
+}
+
+.textLayer {
+    font-family: sans-serif;
+    overflow: hidden;
+    line-height: 1;
+}
+
+/* 可選：調整每個頁面的樣式 */
+#pdf-container .page {
+    margin-bottom: 10px;
+    /* 頁面之間的間距 */
 }
